# SUDL

./: CMakeLists.txt  README.md  build.sh
cnn/: Makefile  active_func.h  active_layer.h  ann.h  base_full_conn_layer.h  cnn.h  conv_layer.cpp  conv_layer.h  flat_layer.h  full_conn_layer.cpp  full_conn_layer.h  full_conn_softmax_layer.cpp  fullconn_layer.h  layer.h  layer_factory.h  loss_layer.h  pooling_layer.cpp  pooling_layer.h  test_conv_layer.cpp  util.h
example/: Readme.md
example/digital_recognition/: Makefile  digital.prototxt  digital_recognition.cpp
example/wordseg/: wordseg.cpp  wordseg.prototxt
graph/: graph.h  test_graph.cpp
layers/: Makefile  README.md  active_func.h  active_layer.h  base_full_conn_layer.h  bi_cell_wrapper.h  bilstm_cell.h  birnn_cell.h  common.h  conv_layer.cpp  conv_layer.h  embedding_layer.h  fc_layer.h  flat_layer.h  full_conn_layer.cpp  full_conn_layer.h  full_conn_softmax_layer.cpp  full_conn_softmax_layer.h  gru_cell.cpp  gru_cell.h  layer.h  layer_factory.h  loss_layer.h  lstm_cell.cpp  lstm_cell.h  pooling_layer.cpp  pooling_layer.h  rnn_cell.cpp  rnn_cell.h  seq_full_conn_layer.h  seq_full_conn_softmax_layer.h  seq_loss_layer.h  test
matrix/: m.h  matrix.h  matrix.h.bak  test_matrix  test_matrix.cpp
net/: Makefile  net_wrapper.h  test_net.cpp
proto/: 1.prototxt  CMakeLists.txt  sudl.proto
rnn/: Makefile  gru.cpp  gru.h  lstm.cpp  lstm.h  reccurent_net.h  rnn  rnn.cpp  rnn.h  seq_layer.h  test_rnn.cpp  test_wordseg.cpp  util.h
rnn/bak_src/: lstm.cpp  rnn.cpp
rnn/examples/: lstm.h  rnn.h
utils/: sub_log.h  util.h
