CMAKE_MINIMUM_REQUIRED(VERSION 2.5)
PROJECT(SUDL)

IF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_compile_options(-std=c++11)
	MESSAGE(STATUS "optional:-std=c++11")   
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES(matrix)
INCLUDE_DIRECTORIES(layers)
INCLUDE_DIRECTORIES(utils)
INCLUDE_DIRECTORIES(net)
INCLUDE_DIRECTORIES(graph)
INCLUDE_DIRECTORIES(proto)
# proto

#AUX_SOURCE_DIRECTORY(./proto DIR_SRCS)
#ADD_LIBRARY(proto ${DIR_SRCS})
#TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARIES} pthread)
add_subdirectory(proto)
#add_subdirectory(third_party)

AUX_SOURCE_DIRECTORY(./layers DIR_SRCS)
ADD_LIBRARY(Lib ${DIR_SRCS})
TARGET_LINK_LIBRARIES(Lib ${PROTOBUF_LIBRARIES} pthread)

#AUX_SOURCE_DIRECTORY(./proto DIR_SRC)
#ADD_LIBRARY(proto ${DIR_SRC})
#TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARIES} pthread)

AUX_SOURCE_DIRECTORY(./example/wordseg WS_SRCS)
ADD_EXECUTABLE(wordseg ${WS_SRCS})
TARGET_LINK_LIBRARIES(wordseg Lib proto)

AUX_SOURCE_DIRECTORY(./example/digital_recognition DR_SRCS)
ADD_EXECUTABLE(dr ${DR_SRCS})
TARGET_LINK_LIBRARIES(dr Lib proto)

AUX_SOURCE_DIRECTORY(./graph GR_SRCS)
ADD_EXECUTABLE(test_graph ${GR_SRCS})
TARGET_LINK_LIBRARIES(test_graph Lib proto)

SET(CMAKE_EXE_LINKER_FLAGS, "-pg -w -DDEBUGALL")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/bin)

